# PyperText

./: .gitignore  Build.bat  Build.sh  LICENSE  README.md  increment.py  pyproject.toml  setup.cfg  test.html  test.py
src/PyperText/: __init__.py  html.py  htmlButton.py  htmlEntry.py  htmlExceptions.py  htmlHeader.py  htmlImage.py  htmlLink.py  htmlList.py  htmlModifiers.py  htmlTable.py  htmlTextbox.py  htmlWidget.py  requirements.txt  tools.py
src/PyperText.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/html/: Build.bat  html.py  htmlButton.py  htmlHeader.py
src/htmlWriter/: __init__.py  html.py  htmlButton.py  htmlHeader.py
