[metadata]
name = PyperText
version = 0.0.7
author = Ixonblitz-MatOS
author_email = gavellmathew@gmail.com
description = "Package made to script HTML"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ixonblitz-MatOS/htmlWriter
Bug Tracker = https://github.com/Ixonblitz-MatOS/htmlWriter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Software Development :: Code Generators
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src